# This file contains default linter configurations for Firebolt python repos
# TODO: Populate with project-specific information

[options.packages.find]
where = src

[mypy]
plugins = pydantic.mypy
disallow_untyped_defs = True
show_error_codes = True
files = src/

[pydantic-mypy]
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[flake8]
max-line-length = 88
per-file-ignores = __init__.py:F401
ignore = E203, W503
ban-relative-imports = True
inline-quotes = "
